# equate

./: .buildinfo  .gitignore  CHANGELOG.md  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  table_of_contents.html
.claude/: CLAUDE.md
.claude/skills/: equate-dev-add-strategy  equate-dev-architecture
.github/workflows/: ci.yml
_modules/: index.html
_modules/equate/: _dependencies.html  _vector.html  base.html  block.html  cluster.html  compare.html  completion.html  facade.html  featurize.html  matching.html  registry.html  util.html
_modules/equate/block/: ann.html  keyed.html  lsh.html  metablock.html  metrics.html  score.html
_modules/equate/cluster/: classify.html
_modules/equate/compare/: calibrate.html  numeric_geo.html  string.html  vector.html  vectorize.html
_modules/equate/examples/: site_names.html
_modules/equate/featurize/: text.html  tfidf.html
_modules/equate/interactive/: candidate_store.html  constraints.html  kbest.html  review.html
_modules/equate/matching/: assign.html  soft.html
_sources/: index.rst.txt  table_of_contents.rst.txt
_sources/module_docs/: equate.rst.txt
_sources/module_docs/equate/: _dependencies.rst.txt  _vector.rst.txt  base.rst.txt  block.rst.txt  cluster.rst.txt  compare.rst.txt  completion.rst.txt  examples.rst.txt  facade.rst.txt  featurize.rst.txt  interactive.rst.txt  matching.rst.txt  registry.rst.txt  util.rst.txt
_sources/module_docs/equate/block/: ann.rst.txt  keyed.rst.txt  lsh.rst.txt  metablock.rst.txt  metrics.rst.txt  score.rst.txt
_sources/module_docs/equate/cluster/: classify.rst.txt
_sources/module_docs/equate/compare/: calibrate.rst.txt  numeric_geo.rst.txt  string.rst.txt  vector.rst.txt  vectorize.rst.txt
_sources/module_docs/equate/examples/: site_names.rst.txt
_sources/module_docs/equate/featurize/: text.rst.txt  tfidf.rst.txt
_sources/module_docs/equate/interactive/: candidate_store.rst.txt  constraints.rst.txt  kbest.rst.txt  review.rst.txt
_sources/module_docs/equate/matching/: assign.rst.txt  soft.rst.txt
docs/research/: 00-taxonomy-and-terminology.md  01-entity-resolution-record-linkage.md  02-blocking-and-scalable-candidate-generation.md  03-assignment-and-graph-matching.md  04-featurization-and-representation.md  05-comparison-and-similarity-functions.md  06-deep-learning-and-llm-entity-matching.md  07-schema-and-ontology-matching.md  08-interactive-active-learning-and-hitl.md  09-python-ecosystem-landscape.md  10-design-implications-for-equate.md  11-design-decisions-and-open-questions.md  12-sequence-and-graph-structure-matching.md  13-llm-and-modern-embedding-matching.md  14-evaluation-benchmarks-and-methodology.md  15-collective-incremental-and-bayesian-er.md  16-data-fusion-and-canonicalization.md  17-vector-databases-and-scale-out.md  18-frontiers-pprl-fairness-geospatial.md  README.md
equate/: __init__.py  _dependencies.py  _vector.py  base.py  completion.py  facade.py  registry.py  site_names.py  util.py
equate/block/: __init__.py  ann.py  keyed.py  lsh.py  metablock.py  metrics.py  score.py
equate/cluster/: __init__.py  classify.py
equate/compare/: __init__.py  calibrate.py  numeric_geo.py  string.py  vector.py  vectorize.py
equate/examples/: __init__.py  site_names.py
equate/featurize/: __init__.py  text.py  tfidf.py
equate/interactive/: __init__.py  candidate_store.py  constraints.py  kbest.py  review.py
equate/matching/: __init__.py  assign.py  soft.py
module_docs/: equate.html
module_docs/equate/: _dependencies.html  _vector.html  base.html  block.html  cluster.html  compare.html  completion.html  examples.html  facade.html  featurize.html  interactive.html  matching.html  registry.html  util.html
module_docs/equate/block/: ann.html  keyed.html  lsh.html  metablock.html  metrics.html  score.html
module_docs/equate/cluster/: classify.html
module_docs/equate/compare/: calibrate.html  numeric_geo.html  string.html  vector.html  vectorize.html
module_docs/equate/examples/: site_names.html
module_docs/equate/featurize/: text.html  tfidf.html
module_docs/equate/interactive/: candidate_store.html  constraints.html  kbest.html  review.html
module_docs/equate/matching/: assign.html  soft.html
skills/equate-dev-add-strategy/: SKILL.md
skills/equate-dev-architecture/: SKILL.md
tests/: test_base.py  test_block.py  test_cluster.py  test_compare.py  test_dependencies.py  test_featurize.py  test_interactive.py  test_matching.py  test_registry.py  test_smoke.py
