[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "equate"
version = "0.0.13"
description = "Tools for matching things: featurize, compare, and match collections of objects (fuzzy correspondence, not exact equality)."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = [
    "matching",
    "entity-resolution",
    "record-linkage",
    "similarity",
    "assignment",
    "joining",
]
authors = [
    { name = "thorwhalen" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy",
    "scipy",
]

[project.optional-dependencies]
# Heavy capabilities are optional extras, imported lazily via equate._dependencies.require
# so the core install stays numpy/scipy-light. More extras are added as their strategy
# stages land (image/audio/bio/graph-kernels/vector-db); see the roadmap.
# --- comparison: fast string similarity (compare stage) ---
fuzzy = ["rapidfuzz"]
phonetic = ["jellyfish"]
# --- featurization: embeddings (featurize stage) ---
embeddings = ["sentence-transformers"]
api = ["openai", "cohere"]
# --- blocking / candidate generation (block stage) ---
ann = ["hnswlib"]
lsh = ["datasketch"]
# --- matching (match stage) ---
graph = ["networkx"]
ot = ["POT"]
# --- interactive: active learning + LLM (interactive stage) ---
active = ["scikit-activeml"]
llm = ["openai"]
# --- legacy / interop featurizers (default TF-IDF is now pure numpy/scipy) ---
grub = ["grub"]
sklearn = ["scikit-learn"]
# --- examples & dev ---
examples = ["pandas", "py2store", "requests"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.1.0"]

[project.urls]
Homepage = "https://github.com/thorwhalen/equate"
Changelog = "https://github.com/thorwhalen/equate/blob/master/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = [
    "equate",
]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    "**/*.ipynb",
    ".git",
    ".venv",
    "build",
    "dist",
    "tests",
    "examples",
    "scrap",
]

[tool.ruff.lint]
select = [
    "D100",
]
ignore = [
    "D203",
    "E501",
    "B905",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = [
    "D",
]
"**/examples/*" = [
    "D",
]
"**/scrap/*" = [
    "D",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "ELLIPSIS",
]

[tool.wads.ci]
project_name = "equate"

[tool.wads.ci.commands]
pre_test = []
test = []
post_test = []
lint = []
format = []

[tool.wads.ci.env]
required_envvars = []
test_envvars = []
extra_envvars = []

[tool.wads.ci.env.defaults]

[tool.wads.ci.quality.ruff]
enabled = true

[tool.wads.ci.quality.black]
enabled = false

[tool.wads.ci.quality.mypy]
enabled = false

[tool.wads.ci.testing]
enabled = true
python_versions = [
    "3.10",
    "3.12",
]
pytest_args = [
    "-v",
    "--tb=short",
]
coverage_enabled = true
coverage_threshold = 0
coverage_report_format = [
    "term",
    "xml",
]
exclude_paths = [
    "examples",
    "scrap",
]
test_on_windows = true

[tool.wads.ci.metrics]
enabled = true
config_path = ".github/umpyre-config.yml"
storage_branch = "code-metrics"
python_version = "3.10"
force_run = false

[tool.wads.ci.build]
sdist = true
wheel = true

[tool.wads.ci.publish]
enabled = true
skip_ci_marker = "[skip ci]"
publish_marker = "[publish]"

[tool.wads.ci.docs]
enabled = true
builder = "epythet"
ignore_paths = [
    "tests/",
    "scrap/",
    "examples/",
]
