[metadata]
description = This is a package with tools for matching things. Dirty things like language, files in your file system, socks and whistles.
license = mit
description-file = README.md
name = equate
root_url = https://github.com/thorwhalen
author = thorwhalen
install_requires = 
		py2store
		pandas
		numpy

