[metadata]
name = equate
version = 0.0.10
url = https://github.com/thorwhalen/equate
platforms = any
description_file = README.md
description = "This is a package with tools for matching things. Dirty things like language, files in your file system, socks and whistles."
license = mit
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
		matching
		joining
		connecting
display_name = equate
author = thorwhalen
root_url = https://github.com/thorwhalen

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	py2store
	pandas
	numpy

